twiddit-kompose/twiddit-ldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: twiddit-ldap
  name: twiddit-ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: twiddit-ldap
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/twiddit-ldap-default: "true"
        io.kompose.service: twiddit-ldap
    spec:
      containers:
        - args:
            - --copy-service
          image: osixia/openldap:1.1.8
          name: twiddit-ldap
          ports:
            - containerPort: 389
            - containerPort: 636
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /var/lib/ldap
              name: twiddit-ldap-claim0
            - mountPath: /etc/ldap/slapd.d
              name: twiddit-ldap-claim1
            - mountPath: /container/service/slapd/assets/certs
              name: twiddit-ldap-claim2
            - mountPath: /container/service/slapd/assets/config/bootstrap/ldif/50-bootstrap.ldif
              name: twiddit-ldap-claim3
      hostname: twiddit-unal-edu-co
      restartPolicy: Always
      volumes:
        - name: twiddit-ldap-claim0
          persistentVolumeClaim:
            claimName: twiddit-ldap-claim0
        - name: twiddit-ldap-claim1
          persistentVolumeClaim:
            claimName: twiddit-ldap-claim1
        - name: twiddit-ldap-claim2
          persistentVolumeClaim:
            claimName: twiddit-ldap-claim2
        - name: twiddit-ldap-claim3
          persistentVolumeClaim:
            claimName: twiddit-ldap-claim3
status: {}
