twiddit-kompose/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: phpldapadmin
  name: phpldapadmin
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 80
  selector:
    io.kompose.service: phpldapadmin
status:
  loadBalancer: {}
