twiddit-kompose/twiddit-ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: twiddit-ldap
  name: twiddit-ldap
spec:
  ports:
    - name: "389"
      port: 389
      targetPort: 389
    - name: "636"
      port: 636
      targetPort: 636
  selector:
    io.kompose.service: twiddit-ldap
status:
  loadBalancer: {}
